style.css
body {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serifs;
  font-size: 1.5rem;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  overflow-x: hidden;
}
a {
  text-decoration: none;
  color: inherit;
}

.logo {
  margin: 15px;
}
.logo img {
  height: 35px;
  width: 30px;
  border-radius: 50%;
}

.dark {
  height: 60px;
}

.darkBtn {
  border: 0;
  background-color: transparent;
}

nav {
  background-color: aliceblue;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
nav ul {
  list-style-type: none;
  display: flex;
  justify-content: space-arounds;
  flex-wrap: wrap;
}
nav ul li {
  margin: 0 10px;
}
header {
  /* background: url("31.png") no-repeat center center/cover; */

  height: 90vh;
  display: flex;
}

aside {
  height: 90vh;
  width: 30vw;
  background-color: tomato;
}

aside div {
  height: 150px;
  width: 85%;
  background-color: rgb(179, 177, 248);
  margin: 10px;
  padding: 5px;
  box-shadow: 5px 5px 10px black;
  border-radius: 10px;
  text-align: center;
}
.time {
  margin-top: 100px;
}

.main {
  background: url("31.png") no-repeat center center/cover;
  /* background-color: violet; */
  width: 70vw;
  height: 90vh;
  z-index: 10;
  overflow: hidden;
}

.welcome {
  background-color: whitesmoke;
  opacity: 95%;
  position: absolute;
  top: 100px;
  left: 50px;
  font-size: 1.8rem;
  padding: 10px;
  border: 2px solid tomato;
  border-radius: 10px;
}
.welcome2 {
  background-color: whitesmoke;
  opacity: 95%;
  position: absolute;
  top: 500px;
  right: 10px;
  font-size: 1.5rem;
  padding: 10px;
  border: 2px solid tomato;
  border-radius: 10px;
}
.welcome3 {
  background-color: whitesmoke;
  opacity: 90%;
  position: absolute;
  top: 400px;
  right: 5px;
  font-size: 1.5rem;
  padding: 10px;
  border: 2px solid tomato;
  border-radius: 10px;
}
.lang {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}
.coding {
  height: 15vh;
  flex: 1;
  background-color: rgb(240, 138, 206);
  display: flex;
  justify-content: center;
  align-items: center;
  text-transform: uppercase;
  font-weight: 900;
  font-style: oblique;
  letter-spacing: 2pxs;
}
.css {
  background-color: rgb(250, 196, 220);
}
.about {
  height: 25vh;
  background-color: rgb(194, 192, 192);
  font-size: 1.7rem;
  text-align: center;
  line-height: 1.5;
  padding-top: 1.2rem;
}

.about ul {
  display: flex;
  list-style-type: none;
  flex-wrap: wrap;
}

.about ul li {
  font-size: 2rem;
  background-color: rgba(126, 175, 193, 0.85);
  padding: 5px;
  margin: 10px;
  border-radius: 10px;
  font-weight: 700;
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
}

#newNote {
  background-color: white;
  border: 3px solid white;
  font-size: 15px;
  border-radius: 5px;
}
#newNote:focus {
  outline: 0;
}

#addNote {
  border: 0;
  font-size: 15px;
  background-color: tomato;
  color: white;
  border-radius: 5px;
  padding: 5px;
  margin-top: 10px;
}
#addNote:hover {
  box-shadow: 2px 2px 5px black;
  background-color: coral;
  cursor: pointer;
}

#addNote:active {
  background-color: crimson;
}

.pic {
  height: 80vh;
  background: url("doodle2.png") no-repeat center center/cover;
  font-size: 1.7rem;
  text-align: center;
  line-height: 1.5;
  padding-top: 1.2rem;
}

footer {
  height: 8vh;
  padding: 0.5rem;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgb(194, 192, 192);
}

.form {
  height: 90vh;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: lightblue;
}

.thanks {
  margin: 0;
  background: linear-gradient(aliceblue, rgb(194, 192, 192));

  text-align: center;
  height: 20vh;
}

.formContainer {
  background-color: lightcyan;
  padding: 0 3rem;
  border-radius: 20px;
  box-shadow: 5px 5px 10px teal;
}
.form input,
.form textarea {
  border: 0;
  font-size: 1.5rem;
  border-radius: 10pxs;
  margin: 5px;
}

.form input:focus,
.form textarea:focus {
  outline: none;
}
.form label {
  padding: 5px;
}

.btnDiv {
  text-align: center;
}

.messageBtn {
  border: 0;
  background-color: rgb(50, 137, 134);
  color: white;
  padding: 0.5rem 2rem;
  margin: 2rem;
  text-align: center;
  font-size: 1.2rem;
  border-radius: 10px;
}

.messageBtn:hover {
  box-shadow: 2px 2px 5px black;
  background-color: coral;
  cursor: pointer;
}

.messageBtn:active {
  background-color: crimson;
}

/* Projects*/
.projectsH1 {
  background-color: transparent;
  text-align: center;
}
.projectsContainer {
  padding-top: 2rem;
  min-height: 100vh;
  display: flex;
  flex-wrap: wrap;
  gap: 50px;
  justify-content: center;
  align-items: center;
  background: linear-gradient(aliceblue, rgb(194, 192, 192));
  /* background: linear-gradient(#e66465, #9198e5); */
}
.card {
  background: linear-gradient(#ecc3c3, #afb3df);
  width: 350px;
  min-height: 200px;
  border-radius: 10px;
  box-shadow: 3px 3px 20px rgba(0, 0, 0, 0.8);
}
.card:hover {
  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.8);
}

.cardTitle {
  background-color: white;
  border-radius: 10px;
  height: 2rem;
  margin: 1rem;
  text-align: center;
}
.cardPic {
  background-color: white;
  border-radius: 10px;
  height: 10rem;
  margin: 1rem;
}

.cardDesc {
  background-color: white;
  border-radius: 10px;
  height: 5rem;
  margin: 1rem;
}

@media (max-width: 750px) {
  aside {
    display: none;
  }
  .main {
    width: 100vw;
  }
  .welcome {
    top: 120px;
  }
  .about {
    height: 50vh;
  }
  nav ul {
    flex-direction: column;
  }
}

@media (max-width: 1024px) {
  .pic {
    height: 80vh;
    background: url("doodle.png") no-repeat center center/cover;
  }
}

